<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pl.tbs</groupId>
    <artifactId>ad-password-toolset</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.0</version>
        </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
            <!-- https://github.com/seinecle/ApachePoi5.0.0-and-JPMS/blob/main/pom.xml -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.0.0</version>
                <exclusions>
                  <exclusion>
                    <artifactId>xalan</artifactId>
                    <groupId>xalan</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-script</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>xml-apis</artifactId>
                    <groupId>xml-apis</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-anim</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-awt-util</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-bridge</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-codec</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-constants</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-css</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-dom</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-ext</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-extension</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-gui-util</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-gvt</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-i18n</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-parser</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-rasterizer</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-rasterizer-ext</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-slideshow</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-squiggle</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-squiggle-ext</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-svg-dom</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-svgbrowser</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-svggen</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-svgpp</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-svgrasterizer</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-swing</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-transcoder</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-ttf2svg</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-util</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                  <exclusion>
                    <artifactId>batik-xml</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                  </exclusion>
                </exclusions>
              </dependency>
              <dependency>
                <groupId>org.apache.xmlgraphics</groupId>
                <artifactId>xmlgraphics-commons</artifactId>
                <version>2.6</version>
                <exclusions>
                  <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                  </exclusion>
                </exclusions>
              </dependency>


    </dependencies>

    <!-- <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>xml-apis</groupId>
                <artifactId>xml-apis</artifactId>
                <version>1.3.04</version>
            </dependency>
        </dependencies>
    </dependencyManagement> -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>16</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.7</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>pl.tbs.App</mainClass>
                            <options>
                                <option>--add-exports</option>
                                <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                             </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
